[project]
name = "safedig-env"
version = "0.1.0"
description = "SafeDig: Mining Safety RL Environment for Meta PyTorch Hackathon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "gradio>=5.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",  # This is what hackathon wants
]

[project.scripts]
safedig = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"